<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Emergency Dispatcher Mobile</string>
    <string name="app_title_main">Emergency Dispatcher Mobile</string>
    <string name="app_title_settings">Settings</string>
    <string name="app_title_user_dispatcher">User Dispatcher</string>
    <string name="app_title_police_dispatcher">Police Dispatcher</string>
    <string name="app_title_participants">Agents</string>

    <string name="label_nick">Enter Username</string>
    <string name="label_post">Choose Your Type</string>
    <string name="label_host">Host</string>
    <string name="label_port">Port</string>
    
    <string name="button_login">Login</string>
    <string name="button_police">Send Police!</string>
    <string name="button_ambulance">Send Ambulance!</string>
    <string name="button_fire">Send Fire Truck!</string>
    <string name="button_electricity">Send Electricity Services!</string>
    <string name="button_use">Save</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_participants">Current Agents</string>
    <string name="menu_clear">Clear</string>
    
    <string name="msg_connecting_to">Connecting To The Manager Agent At:</string>
    <string name="msg_nickname_in_use">Username already in use!</string>
    <string name="msg_nickname_not_valid">Invalid Username!</string>
    <string name="msg_unexpected">Unexpected error!</string>
    
    <string name="msg_interface_exc">Internal error!</string>
    <string name="msg_controller_exc">Server error!</string>

    <string-array name="posts_array">
        <item>User</item>
        <item>Police</item>
        <item>Ambulance</item>
        <item>Firefighter</item>
        <item>Electrician</item>
    </string-array>
</resources>
