<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:weightSum="1"
	android:background="@color/colorPrimary"
	app:theme="@style/AppTheme"
	>


	<ImageView
		android:id="@+id/imageView"
		android:layout_width="match_parent"
		android:layout_height="178dp"
		app:srcCompat="@drawable/icon" />

	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:text="@string/label_nick"
		android:textColor="@color/colorAccent"
		android:textSize="20sp" />

	<EditText
		android:id="@+id/edit_nickname"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textColor="@android:color/white" />


	<TextView
		android:id="@+id/textView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:text="@string/label_post"
		android:textColor="@color/colorAccent"
		android:textSize="20sp" />

	<Spinner
		android:id="@+id/edit_post"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="0.12"
		android:scrollIndicators="right"
		android:spinnerMode="dropdown"
		android:theme="@style/AppTheme"
		android:visibility="visible" />

    <Button
        android:id="@+id/button_chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
		android:background="@color/colorPrimaryDark"
        android:text="@string/button_login" />

	<TextView
		android:id="@+id/infoTextView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="info" />
</LinearLayout>
